rename to CategoriesIndexGenerator